--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ server {
     root /var/www/html;
     index index.php index.html;
 
+    access_log off;
+    error_log /var/log/nginx/error.log warn;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
